Envio de requisito 7

--- a/src/index.css
+++ b/src/index.css
@@ -17,3 +17,19 @@ code {
   display: flex;
   justify-content: center;
 }
+
+.container {
+  width: 100%;
+}
+
+.albums {
+  display: flex;
+  max-width: 1200px;
+  flex-wrap: wrap;
+  margin: 0 auto;
+}
+
+.card-album {
+  width: 300px;
+
+}
