--- a/src/index.css
+++ b/src/index.css
@@ -158,23 +158,26 @@ Header
 
 .header {
   width: 100%;
-  height: 70px;
   background: white;
   padding-top: 15px;
+  height: 120px;
   border-bottom: 1px solid rgb(216, 213, 213);
 }
 
 .header-content {
-  max-width: 1200px;
+  max-width: 1220px;
   margin: 0 auto;
-  display: flex;
-  justify-content: space-between;
   align-items: center;
+}
+
+.logo {
+  width: 50%;
 }
 
 .links {
   display: flex;
   gap: 65px;
+  width: 100%;
 }
 
 .link-item {
@@ -184,8 +187,10 @@ Header
 
 .user {
   display: flex;
-  align-items: center;
+  align-items: flex-end;
   gap: 10px;
+  width: 50%;
+  justify-content: flex-end;
 }
 
 .user img {
@@ -194,6 +199,30 @@ Header
   border: 2px solid #3f3d56;
 }
 
+/* MENU */
+
+.menu {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.menu-user {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.menu-links {
+  width: 100%;
+  height: 75px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 25px;
+}
+
+/*  */
 /* 
 Search
 */
